# seraphbot

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  README.md  debug-linux-clang.ini  debug-linux-gcc.ini  debug-windows.ini  meson.build  vcpkg.json
.github/workflows/: build-release.yml  discord-release.yml
include/seraphbot/: application.hpp
include/seraphbot/core/: app_state.hpp  audio_system.hpp  chat_message.hpp  command_parser.hpp  connection_manager.hpp  logging.hpp  lua_command_engine.hpp  miniaudio_player.hpp  twitch_service.hpp
include/seraphbot/discord/: notifications.hpp
include/seraphbot/obs/: obsservice.hpp
include/seraphbot/tw/: auth.hpp  chat.hpp  chat_read.hpp  chat_write.hpp  config.hpp  eventsub.hpp
include/seraphbot/tw/chat/: read.hpp  send.hpp
include/seraphbot/ui/: firasans_font.hpp  imgui_backend.hpp  imgui_backend_opengl.hpp  imgui_manager.hpp
include/seraphbot/viewmodels/: auth_viewmodel.hpp  chat_viewmodel.hpp  discord_viewmodel.hpp
src/: application.cpp  main.cpp  meson.build
src/commands/: dice.lua  flip.lua  hello.lua  limited.lua  modcmd.lua  sfx.lua  vip_joke.lua
src/core/: app_state.cpp  audio_system.cpp  command_parser.cpp  connection_manager.cpp  logging.cpp  lua_command_engine.cpp  meson.build  miniaudio_player.cpp  twitch_service.cpp
src/discord/: notifications.cpp
src/tw/: auth.cpp  chat.cpp  chat_read.cpp  chat_write.cpp  config.cpp  eventsub.cpp  meson.build
src/tw/chat/: read.cpp  send.cpp
src/ui/: imgui_manager.cpp  meson.build
